fix:spacing between social icons

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -61,9 +61,9 @@ body {
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   @apply bg-accent rounded-full;
-}
+} */
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
